force-app/main/default/objects/HelloSign__Signer_Attachment__c/HelloSign__Signer_Attachment__c.object-meta.xml
<CustomObject>
    <label>Dropbox Sign Signer Attachment</label>
    <nameField>
        <displayFormat>Attachment-{0000}</displayFormat>
        <label>Signer Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dropbox Sign Signer Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>