force-app/main/default/objects/HelloSign__Signer_Attachment__c/fields/HelloSign__Instructions__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Instructions__c</fullName>
    <description>String field on the signer attachment custom object. Stores the instructions for the attachment.</description>
    <label>Instructions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>