force-app/main/default/objects/HelloSign__Signer_Attachment__c/fields/HelloSign__Name__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Name__c</fullName>
    <description>String field on the signer attachment custom object. Stores the name for the attachment.</description>
    <label>Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>