force-app/main/default/objects/HelloSign__Signer_Attachment__c/fields/HelloSign__Order__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Order__c</fullName>
    <description>Numeric field on the signer attachment custom object. Stores the numerical placement of the attachment if they are in order on the request.</description>
    <label>Order</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>