force-app/main/default/objects/HelloSign__Signer_Attachment__c/fields/HelloSign__Required__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field on the signer attachment custom object. Stores if the attachment is required for the signature request.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>