force-app/main/default/objects/HelloSign__Signer_Attachment__c/fields/HelloSign__Signer_Role__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Signer_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>String field on the signer attachment custom object. Stores the id of the signer role for the signature request.</description>
    <label>Dropbox Sign Signer Role</label>
    <referenceTo>HelloSign__SignerRole__c</referenceTo>
    <relationshipName>Signer_Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>