force-app/main/default/objects/HelloSign__Signer_Attachment__c/fields/HelloSign__Template__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>String field on the signer attachment custom object. Stores the id of the Dropbox Sign template.</description>
    <label>Dropbox Sign Template</label>
    <referenceTo>HelloSign__Template__c</referenceTo>
    <relationshipName>Signer_Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>